HOP-3426: cleanup powermock